# ThermalCalculater

./: .gitignore  CMakeLists.txt  CMakeSettings.json  ThermalCalculater.cpp  test.cpp
ConceptPython/: thick.py  thin.py
ThermalCalculater/: CMakeLists.txt  ThermalCalculater.cpp  ThermalCalculater.h  calculation.cpp  main.cpp
ThermalCalculater/include/: calculation.h  stdafx.h
src/: CMakeLists.txt
src/BulletProof/: BulletProof.cpp  BulletProof.h  CMakeLists.txt
src/DateTime/: CMakeLists.txt  DateTime.cpp  DateTime.h
src/MultyOSCom/: CMakeLists.txt  MultyOSCom.cpp  MultyOSCom.h
